test/syc/good/bxor.c
/*
 * Bitwise XOR
 */

int a, b;

int bxor(void)
{
	return a ^ b;
}
