test/syc/bad/undeclvar.c
/*
 * Referencing undeclared variable
 */

int main(void)
{
	/* Variable 'a' is undeclared, should produce an error. */
	return a;
}
